# kaleidoscope-hs

./: README.md  cabal.project  flake.nix  hie.yaml  kaleidoscope-hs.cabal
.github/workflows/: CI.yaml
app/: Main.hs
src/: AST.hs  Codegen.hs  LLVM.hs  Lexer.x  Lib.hs  Parsec.hs  Parser.hs  REPL.hs  Token.hs
src/LLVM/: Bindings.chs  Context.hs
test/: Spec.hs
