cabal-version:   2.4
name:            kaleidoscope-hs
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Jonas Carpay
maintainer:      Jonas Carpay <jonascarpay@gmail.com>
copyright:       2021 Jonas Carpay
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/kaleidoscope-hs#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/kaleidoscope-hs.git

common common-options
  build-depends:      base >=4.9 && <5
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:             common-options
  hs-source-dirs:     src

  -- The exact name of the library below was found out by running
  -- ${pkgs.llvm_12.dev}/bin/llvm-config --libs
  extra-libraries:    LLVM-12
  exposed-modules:
    AST
    Codegen
    Lexer
    Lib
    LLVM.Bindings
    Parsec
    Parser
    Token

  build-tool-depends: alex:alex -any, c2hs:c2hs -any
  build-depends:
    , array
    , bytestring
    , containers
    , mtl
    , parser-combinators
    , text

executable kaleidoscope-hs-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  kaleidoscope-hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite kaleidoscope-hs-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , kaleidoscope-hs
    , QuickCheck

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark kaleidoscope-hs-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , kaleidoscope-hs

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
